--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Test git</h1>
     <div class="test">
-        <p>test</p>
+        <p>Hello teacher and everyone</p>
         <h2>hello</h2>
     </div>
 </body>
