--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Test git</h1>
     <div class="test">
-        <p>Hello teacher and everyone</p>
-        <h2>hello</h2>
+        <p>Test test</p>
     </div>
+    <h5>footer</h5>
 </body>
 </html>
